online-zoo/pages/zoos/zoos.css
@charset "UTF-8";
.bage {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width: 120px;
  height: 38px;
  border-bottom-right-radius: 5px;
  border-bottom: 1px solid var(--color-main-light);
  border-right: 1px solid var(--color-main-light);
  /* 🔽🔠🔽 */
  font-family: "Montserrat", sans-serif;
  font-style: normal;
  font-weight: var(--font-weight--ui-text);
  font-size: var(--font-size--ui-text);
  line-height: var(--line-height--ui-text);
  /* 🆎 */
  text-transform: uppercase;
  /* 🔼🔠🔼 */
  color: var(--color-main-light);
  fill: var(--color-main-light);
}
.bage__icon {
  width: 18px;
  height: 18px;
}
.bage--active {
  border-color: var(--color-ui-1-def);
  background-color: var(--color-ui-1-def);
}

/*
  ⚜️ BLOCK: SIDE-BAR ⚜️
*/
.side-bar-rail {
  --side-bar-rail-self-w: var(--side-bar-rail-w, 220px);
  --side-bar-rail-self-off:
      var(--side-bar-rail-off: calc(50% - 960px));
  position: absolute;
  z-index: 999;
  top: 0;
  bottom: 0;
  left: 0;
  width: var(--side-bar-rail-self-w);
}
@media screen and (max-width: 1900px) {
  .side-bar-rail {
    --side-bar-rail-self-w: var(--side-bar-rail-w, 115px);
  }
}
@media screen and (max-width: 1000px) {
  .side-bar-rail {
    --side-bar-rail-self-w: var(--side-bar-rail-w, 78px);
  }
}
@media screen and (max-width: 800px) {
  .side-bar-rail {
    top: calc(-1 * var(--page-h-header));
  }
}
@media screen and (max-width: 600px) {
  .side-bar-rail {
    --side-bar-rail-self-w: var(--side-bar-rail-w, 50px);
  }
}

.side-bar {
  --color-main-self-bg: var(--color-main-bg, var(--color-main-navy));
  --color-main-self-def: var(--color-main-def, var(--color-main-light));
  --color-main-self-hov: var(--color-main-hov, var(--color-ui-1-def));
  --side-bar-self-w: var(--side-bar-w, 100%);
  --side-bar-self-border: 1px solid var(--color-main-self-def);
  position: sticky;
  top: 0;
  left: 0;
  border: var(--side-bar-self-border);
  border-top: none;
  border-left: none;
  background-color: var(--color-main-self-bg);
}
@media screen and (max-width: 800px) {
  .side-bar {
    top: var(--page-h-header);
  }
}
.side-bar__menu {
  display: flex;
  flex-direction: column;
}
.side-bar__container--bage {
  position: absolute;
  top: 0;
  left: 0;
}
@media screen and (max-width: 1900px) {
  .side-bar__container--bage {
    display: none;
  }
}
.side-bar__container--control {
  height: 80px;
  --w-btn-icon: 100%;
  --h-btn-icon: 100%;
  --color-icon-def: var(--color-main-self-def);
  --color-icon-hov: var(--color-main-self-hov);
  box-shadow: inset 0 0 0 #0000;
  transition: box-shadow 500ms;
}
.side-bar__container--control:hover {
  box-shadow: inset 0 0 25px #0005;
}
@media screen and (max-width: 1000px) {
  .side-bar__container--control {
    height: 50px;
  }
}
.side-bar__container--control .btn-icon:hover .svg-icon {
  transform: scale(1.5);
}
.side-bar__container--control-expand {
  order: 1;
}
.side-bar__container--control-expand .btn-icon {
  justify-content: flex-end;
  padding-right: 30px;
}
@media screen and (max-width: 1900px) {
  .side-bar__container--control-expand .btn-icon {
    justify-content: center;
    padding-right: 0;
  }
}
.side-bar__container--control-scroll-down {
  order: 3;
}
.side-bar__selector {
  order: 2;
  display: flex;
  flex-direction: column;
  border-top: var(--side-bar-self-border);
}
.side-bar__slot {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 171px;
  border-bottom: var(--side-bar-self-border);
  --w-btn-icon: 104px;
  --h-btn-icon: 104px;
  --w-svg-icon: 70px;
  --h-svg-icon: 70px;
  --color-btn-def: var(--color-main-self-hov);
  --color-btn-hov: var(--color-main-self-hov);
  --color-icon-def: var(--color-main-self-bg);
  --color-icon-hov: var(--color-main-self-def);
}
@media screen and (max-width: 1900px) {
  .side-bar__slot {
    --w-btn-icon: 100%;
    --h-btn-icon: 100%;
    --w-svg-icon: 50px;
    --h-svg-icon: 50px;
    --color-btn-def: transparent;
    --color-btn-hov: transparent;
    --color-icon-def: var(--color-main-self-hov);
    --color-icon-hov: var(--color-main-self-def);
  }
}
@media screen and (max-width: 1000px) {
  .side-bar__slot {
    height: 100px;
    --w-svg-icon: 35px;
    --h-svg-icon: 35px;
  }
}
@media screen and (max-width: 600px) {
  .side-bar__slot {
    height: 50px;
    --w-svg-icon: 25px;
    --h-svg-icon: 25px;
  }
}
.side-bar__slot .btn-icon {
  border-radius: 50%;
  box-shadow: 0 0 0 0px #000;
}
.side-bar__slot .btn-icon:hover {
  box-shadow: 0 0 0 5px var(--color-main-self-bg), 0 0 0 8px var(--color-main-self-hov);
}
@media screen and (max-width: 1900px) {
  .side-bar__slot .btn-icon {
    border-radius: unset;
    box-shadow: none;
  }
  .side-bar__slot .btn-icon:hover {
    box-shadow: none;
  }
  .side-bar__slot .btn-icon:hover .svg-icon {
    transform: scale(1.1);
  }
}
.side-bar__slot--active {
  pointer-events: none;
  --color-btn-def: var(--color-main-self-def);
  --color-btn-hov: var(--color-main-self-def);
}
@media screen and (max-width: 1900px) {
  .side-bar__slot--active {
    --color-btn-def: transparent;
    --color-btn-hov: transparent;
    --color-icon-def: var(--color-main-self-def);
    --color-icon-hov: var(--color-main-self-def);
  }
}
.side-bar__slot--active .btn-icon {
  box-shadow: 0 0 0 5px var(--color-main-self-bg), 0 0 0 8px var(--color-main-self-def);
}
@media screen and (max-width: 1900px) {
  .side-bar__slot--active .btn-icon {
    box-shadow: none;
  }
  .side-bar__slot--active .btn-icon:hover {
    box-shadow: none;
  }
}
.side-bar .cam-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 104px;
  height: 104px;
  border-radius: 50%;
  background-color: var(--color-ui-1-def);
  fill: var(--color-main-navy);
}
.side-bar .cam-icon svg {
  transition: transform 300ms ease-in-out;
}
.side-bar .cam-icon:hover svg {
  transform: scale(1.2);
}
.side-bar .cam-icon svg {
  height: 61px;
}
.side-bar .icon-panda svg {
  width: 81px;
}
/* ... */

